[package]
authors = ["Nuno Martins <nmartins10@gmail.com>"]
edition = "2018"
name = "roguelike-tutorial"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "ch01-hellorust",
  "ch02-helloecs",
  "ch03-walkmap",
  "ch04-newmap",
  "ch05-fov",
  "ch06-monsters",
  "ch07-damage",
  "ch08-ui",
  "ch09-items",
  "ch10-ranged",
  "ch11-loadsave",
  "ch12-delvingdeeper",
  "ch13-difficulty",
  "ch14-gear",
  "ch16-nicewalls",
  "ch17-blood",
  "ch18-particles",
  "ch19-food",
]
