[package]
authors = ["Nuno Martins <nmartins10@gmail.com>"]
edition = "2018"
name = "ch22-simpletraps"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = {version = "0.8.1", features = ["serde"]}
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
specs = {version = "0.16.1", features = ["serde"]}
specs-derive = "0.4.1"
